--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^8.2.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsdoc": "^46.3.0",
     "eslint-plugin-vue": "^9.15.1",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
