--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,11 @@
-{}
+{
+  "tabWidth": 4,
+  "overrides": [
+    {
+      "files": "frontend/*",
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
+}
