--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsdoc": "^46.3.0",
     "eslint-plugin-vue": "^9.15.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "vue-tsc": "^1.4.2",
-    "husky": "^8.0.0"
+    "vue-tsc": "^1.4.2"
   }
 }
