--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-  "name": "loernwerk",
-  "private": true,
-  "version": "0.0.1dev",
-  "scripts": {
-    "dev": "concurrently -c \"auto\" \"npm:dev:backend\" \"npm:dev:frontend\"",
-    "dev:backend": "ts-node backend/loernwerkServer.ts",
-    "dev:frontend": "vite dev frontend",
-    "build": "npm run build:frontend && npm run build:backend",
-    "build:backend": "tsc --project tsconfig.node.json",
-    "build:frontend": "vue-tsc && vite build frontend",
-    "start": "node build/loernwerkServer.js",
-    "preview": "vite preview frontend",
-    "lint": "eslint .",
-    "prettier": "prettier --write .",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "vue": "^3.2.47"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "concurrently": "^8.2.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jsdoc": "^46.3.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "vue-tsc": "^1.4.2"
-  }
+    "name": "loernwerk",
+    "private": true,
+    "version": "0.0.1dev",
+    "scripts": {
+        "dev": "concurrently -c \"auto\" \"npm:dev:backend\" \"npm:dev:frontend\"",
+        "dev:backend": "ts-node backend/loernwerkServer.ts",
+        "dev:frontend": "vite dev frontend",
+        "build": "npm run build:frontend && npm run build:backend",
+        "build:backend": "tsc --project tsconfig.node.json",
+        "build:frontend": "vue-tsc && vite build frontend",
+        "start": "node build/loernwerkServer.js",
+        "preview": "vite preview frontend",
+        "lint": "eslint .",
+        "prettier": "prettier --write .",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "vue": "^3.2.47",
+        "vue-router": "^4.2.2"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.60.0",
+        "@typescript-eslint/parser": "^5.60.0",
+        "@vitejs/plugin-vue": "^4.1.0",
+        "autoprefixer": "^10.4.14",
+        "concurrently": "^8.2.0",
+        "eslint": "^8.43.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-jsdoc": "^46.3.0",
+        "eslint-plugin-vue": "^9.15.1",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.2.2",
+        "postcss": "^8.4.24",
+        "prettier": "^2.8.8",
+        "tailwindcss": "^3.3.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.9",
+        "vue-tsc": "^1.4.2"
+    }
 }
