--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/vue-fontawesome": "^3.0.3",
         "vue": "^3.2.47",
         "vue-router": "^4.2.2"
     },
