--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "typeorm": "^0.3.17",
         "vue": "^3.2.47",
         "vue-router": "^4.2.2"
     },
