--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
+        "bcrypt": "^5.1.0",
         "better-sqlite3": "^8.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
