--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vue-router": "^4.2.2"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/express-session": "^1.17.7",
