--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "memorystore": "^1.6.7",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17",
         "vue": "^3.2.47",
