--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "better-sqlite3": "^8.4.0",
+        "connect-history-api-fallback": "^2.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
