--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bcrypt": "^5.1.0",
         "connect-history-api-fallback": "^2.0.0",
         "cors": "^2.8.5",
+        "decompress": "^4.2.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-fileupload": "^1.4.0",
@@ -40,6 +41,7 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
+        "@types/decompress": "^4.2.4",
         "@types/express": "^4.17.17",
         "@types/express-fileupload": "^1.4.1",
         "@types/express-session": "^1.17.7",
