--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "express": "^4.18.2",
         "express-fileupload": "^1.4.0",
         "express-session": "^1.17.3",
+        "i18next": "^23.2.8",
+        "i18next-fs-backend": "^2.1.5",
+        "i18next-http-middleware": "^3.3.2",
         "memorystore": "^1.6.7",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.6",
