Trying to speed up actions by using caches

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup node
         uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "npm"
       - run: npm install
       - run: npm run lint -- --output-file eslint_report.json --format json
         continue-on-error: true
