--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -4,7 +4,7 @@ on:
  workflow_dispatch:
  pull_request:
     types: [opened, synchronize, reopened]
-      
+
 jobs:
   pre_job:
     runs-on: ubuntu-latest
@@ -24,10 +24,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
+
       - uses: actions/setup-node@v3
         with:
           node-version: "16"
+          cache: "npm"
 
       - name: Install and Build 🔧
         run: |
