--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "express-fileupload": "^1.4.0",
         "express-session": "^1.17.3",
         "memorystore": "^1.6.7",
+        "quill": "^1.3.7",
+        "quill-delta": "^5.1.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.6",
         "typeorm": "^0.3.17",
@@ -47,6 +49,7 @@
         "@types/express-fileupload": "^1.4.1",
         "@types/express-session": "^1.17.7",
         "@types/node": "^20.3.2",
+        "@types/quill": "^2.0.10",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "@vitejs/plugin-vue": "^4.1.0",
