--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "i18next-fs-backend": "^2.1.5",
         "i18next-http-middleware": "^3.3.2",
         "memorystore": "^1.6.7",
+        "pdfjs": "^2.5.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.6",
         "typeorm": "^0.3.17",
