--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
         "i18next-fs-backend": "^2.1.5",
         "i18next-http-middleware": "^3.3.2",
         "memorystore": "^1.6.7",
+        "pdfjs": "^2.5.0",
         "quill": "^1.3.7",
         "quill-delta": "^5.1.0",
-        "pdfjs": "^2.5.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.1.6",
         "typeorm": "^0.3.17",
         "vue": "^3.2.47",
         "vue-draggable-next": "^2.2.1",
+        "vue-i18n": "^9.2.2",
         "vue-router": "^4.2.2"
     },
     "devDependencies": {
