Enhanced build script to correctly output everything to the 'build' folder

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
         "dev": "concurrently -c \"auto\" \"npm:dev:backend\" \"npm:dev:frontend\"",
         "dev:backend": "ts-node --project tsconfig.node.json backend/loernwerkServer.ts",
         "dev:frontend": "vite dev frontend",
-        "build": "npm run build:frontend && npm run build:backend",
+        "build": "npm run build:frontend && npm run build:backend && npm run build:postscript",
         "build:backend": "tsc --project tsconfig.node.json",
         "build:frontend": "vue-tsc && vite build frontend --emptyOutDir",
-        "start": "node build/backend/loernwerkServer.js",
+        "build:postscript": "ts-node --project tsconfig.node.json build_postscript.ts",
+        "start": "cd build && node backend/loernwerkServer.js",
         "preview": "vite preview frontend",
         "lint": "eslint .",
         "prettier": "prettier --write .",
