Initial test config

--- a/.eslintignore
+++ b/.eslintignore
@@ -4,3 +4,8 @@ build
 tailwind.config.js
 /h5p/
 jest.config.js
+playwright.config.ts
+vitest.config.ts
+playwright-report
+test-results
+playwright/.cache
