--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@esbuild/win32-x64": "^0.18.18",
     "@playwright/test": "^1.36.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
@@ -75,8 +76,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsdoc": "^46.3.0",
     "eslint-plugin-vue": "^9.15.1",
-    "happy-dom": "^10.5.2",
     "husky": "^8.0.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
