--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitest/coverage-v8": "^0.34.2",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
     "eslint": "^8.43.0",
