--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:unit": "jest",
     "test:component": "vitest",
     "test:e2e": "playwright test",
-    "test:e2e:prepare-db": "node -r \"fs\" -e \"fs.copyFileSync('./tests/e2e/test.db', './tests/e2e/test_run.db');\""
+    "test:e2e:prepare-db": "node -r \"fs\" -e \"fs.copyFileSync('./tests/e2e/test.db', './tests/e2e/test_run.db');\"",
+    "test:load": "ts-node --project tsconfig.node.json tests/loadtests.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
